# pycli-tasks

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/cli/: categories.py  setup.py  tasks.py
src/db/: categories.py  tasks.py
src/models/: category.py  tasks.py
src/utils/: console.py  db.py
